edit README.md and Recipies and Index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <img src="images/foodie.jpg" alt="an image of delicious food">
 
     <ul>
-        <li>Steak Recipe</li>
-        <li>Soup Recipe</li>
-        <li>Dessert Recipe</li>
+        <li> <a href="./Recipies/Steak.html">Steak Recipe</a> </li>
+        <li> <a href="./Recipies/Soup.html"> Soup Recipe </a></li>
+        <li> <a href="./Recipies/Dessert.html"> Dessert Recipe </a> </li>
     </ul>
     
 </body>
