Edit Recipies links

--- a/Recipies/Soup.html
+++ b/Recipies/Soup.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Delightful Soup Recipes</h1>
     <img src="/images/soup.jpeg" alt="an image of mixed vegetables soup" />
-    This soup is spicy hot and can warm up any cold winter day. Go on and give
-    it a try this season.
+    <p> soup is spicy hot and can warm up any cold winter day. Go on and give
+    it a try this season.</p> 
     <h2>INGREDIENTS</h2>
     <ul>
         <li>Onion</li>
@@ -47,7 +47,7 @@
         </li>
     </ol>
     </ul>
-    <a href="./Pages/index.html">Home</a>
+    <a href="../index.html">Home</a> <a href="/Recipies/Steak.html"> Steak </a>
 </body>
 
 </html>
