edit image source

--- a/Recipies/Dessert.html
+++ b/Recipies/Dessert.html
@@ -8,7 +8,7 @@
 </head>
         <body>
             <h1>CHOC CHIP COOKIES RECIPE</h1>
-            <img src="/images/chocchipcookies.jpeg" alt="an image of chocolate chip cookies" />
+            <img src="../images/chocchipcookies.jpeg" alt="an image of chocolate chip cookies" />
             <p>
                 Its fun to put a twist on olden goldies like the traditional chocolate
                 chip recipe follow a few steps below and create a modern delight with a
