--- a/Recipies/Steak.html
+++ b/Recipies/Steak.html
@@ -7,7 +7,7 @@
     <title>Steak Recipe </title>
     <body>
         <h1>Easy Steak Recipe</h1>
-        <img src="/images/steak.jpg" alt="an image of steak">
+        <img src="../images/steak.jpg" alt="an image of steak">
         <h2>INGREDIENTS</h2>
         <ul>
             <li>2 New York Strip Steaks 1 pound and 1 1/4″ thick</li>
