--- a/Recipies/Soup.html
+++ b/Recipies/Soup.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Delightful Soup Recipes</h1>
-    <img src="/images/soup.jpeg" alt="an image of mixed vegetables soup" />
+    <img src="../images/soup.jpeg" alt="an image of mixed vegetables soup" />
     <p> soup is spicy hot and can warm up any cold winter day. Go on and give
     it a try this season.</p> 
     <h2>INGREDIENTS</h2>
