--- a/Recipies/Steak.html
+++ b/Recipies/Steak.html
@@ -42,7 +42,7 @@
             </li>
             <li>Remove steak and rest 10 minutes before slicing against the grain.</li>
         </ol>
-        <a href="/Recipies/Dessert.html">Dessert</a> <a href="../index.html"> Home </a>
+        <<a href="../index.html"> Home </a> <a href="#Header"> Return to Top </a>
         </body>
 
 </html>
